# lab-llm-asr-translation

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
config/: app_config.py
labs_workshop/: lab.ipynb
processors/: audio_extractor.py  base_processor.py  summarizer.py  transcriber.py  translator.py
utils/: logging_utils.py  process_audio.py  prompt_template.py  srt_formatter.py  string.py  subtitle.py  time.py  time_utils.py
workflow/: graph_builder.py  state.py  workflow_factory.py
