[project]
name = "llm-asr-translation"
version = "0.1.0"
description = "LLM lab for ASR and translation"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
python-dotenv = "^1.0.1"
ffmpeg-python = "^0.2.0"
langchain = "^0.3.21"
langgraph = "^0.3.20"
langchain-openai = "^0.3.10"
langchain-google-genai = "^2.1.1"
openai-whisper = "^20240930"
streamlit = "^1.44.0"
nest-asyncio = "^1.6.0"
yt-dlp = "^2025.3.26"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
